Site changes [skip-ci]

--- a/assets/applovin-max.json
+++ b/assets/applovin-max.json
@@ -14,9 +14,11 @@
     "Android"
   ],
   "project_url": "https://github.com/AppLovin/AppLovin-MAX-Defold",
+  "stars": 9,
   "tags": [
     "Ads",
     "Monetization"
   ],
+  "timestamp": 1710236546.0,
   "website_url": "https://dash.applovin.com/documentation/mediation/defold/getting-started/integration"
 }
