--- a/assets/applovin-max.json
+++ b/assets/applovin-max.json
@@ -20,5 +20,5 @@
     "Monetization"
   ],
   "timestamp": 1710236546.0,
-  "website_url": "https://dash.applovin.com/documentation/mediation/defold/getting-started/integration"
+  "website_url": "https://developers.applovin.com/en/max/defold/overview/integration"
 }
