--- a/.github/workflows/update_stars.yml
+++ b/.github/workflows/update_stars.yml
@@ -15,4 +15,5 @@ jobs:
             { name: 'Install Python', uses: actions/setup-python@v4, with: { python-version: 3.10.5, architecture: x64 } },
             { name: 'Install Requests', run: 'pip install --user requests' },
             { name: 'Update stars', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} starcount' },
+            { name: 'Update releases', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} releases' },
             { name: 'Commit changes', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} commit' }]
