create header file

--- a/.github/workflows/update_github_info.yml
+++ b/.github/workflows/update_github_info.yml
@@ -1,4 +1,4 @@
-name: Update stars
+name: Update GitHub info
 
 on:
     schedule:
@@ -16,4 +16,5 @@ jobs:
             { name: 'Install Requests', run: 'pip install --user requests' },
             { name: 'Update stars', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} starcount' },
             { name: 'Update releases', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} releases' },
+            { name: 'Update header', run: 'python update.py header' },
             { name: 'Commit changes', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} commit' }]
