check if it's a defold lib which can be used as a dependency for a project

--- a/.github/workflows/update_github_info.yml
+++ b/.github/workflows/update_github_info.yml
@@ -16,5 +16,6 @@ jobs:
             { name: 'Install Requests', run: 'pip install --user requests' },
             { name: 'Update stars', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} starcount' },
             { name: 'Update releases', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} releases' },
+            { name: 'Detect Defold libraries', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} library' },
             { name: 'Update header', run: 'python update.py header' },
             { name: 'Commit changes', run: 'python update.py --githubtoken=${{ secrets.SERVICES_GITHUB_TOKEN }} commit' }]
